Fixed an element overflowing on mobile due to loading animation

--- a/src/components/commands/_view.module.sass
+++ b/src/components/commands/_view.module.sass
@@ -15,6 +15,7 @@
 
     @include mediaScreen
         width: 100%
+        overflow-x: hidden
 
     .returnPage
         font-weight: bold
